# ECE1724H_Project

./: .gitignore  README.md  Steps.md  add_ata_accounts.sh  add_ata_accounts_and_mint.sh  amm_dex_start.sh  create_tokens.sh  deposit.sh  dex_display.sh  init_pool.sh  inspect_pool.sh  mint_to_user2.sh  swap.sh  withdraw.sh
amm_dex/: Anchor.toml
amm_dex/programs/amm_dex/: Cargo.toml
amm_dex/programs/amm_dex/src/: error.rs  lib.rs  state.rs  utils.rs
amm_dex/programs/amm_dex/src/instructions/: add_liquidity.rs  initialize.rs  mod.rs  rm_liquidity.rs  swap.rs
amm_dex/tests/: amm_dex.ts
cli_client/: Cargo.toml
cli_client/src/: cli.rs  main.rs
cli_client/src/commands/: add_liquidity.rs  init_pool.rs  inspect_pool.rs  mod.rs  rm_liquidity.rs  showing_dex.rs  swap.rs  utils.rs  wallet.rs
trading_agent/: Agent.toml  Cargo.toml
trading_agent/src/: main.rs
