[package]
name = "cli_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = "0.32.1"
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
clap = {version ="4.5.53", features = ["derive"]}
serde = "1.0.228"

amm_dex = { path = "../amm_dex/programs/amm_dex", features = ["no-entrypoint"] }
anyhow = "1.0.100"
shellexpand = "3.1.1"
solana-system-interface = "3.0.0"
colored = "3.0.0"
comfy-table = "7.2.1"
serde_json = "1.0"
solana-client = "2.3.13"
